backend is linked to the frontend

--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -47,6 +47,10 @@
     border-radius: 10px;
     text-align: center;
   }
+  .loginButton:disabled{
+   cursor: not-allowed;
+   background-color: coral;
+  }
   
   .loginRegisterButton {
     position: absolute;
