--- a/client/src/components/singlePost/singlePost.css
+++ b/client/src/components/singlePost/singlePost.css
@@ -5,6 +5,8 @@
   .singlePostWrapper {
     padding: 20px;
     padding-right: 0;
+    display: flex;
+    flex-direction: column;
   }
   
   .singlePostImg {
@@ -20,6 +22,19 @@
     font-size: 28px;
     font-family: "Lora", sans-serif;
   }
+  .singlePostTitleInput{
+    text-align: center;
+    margin: 10px;
+    font-size: 28px;
+    border: none;
+    color: gray;
+    border-bottom: 1px solid  lightgray;
+
+  }
+  .singlePostTitleInput:focus{
+    outline: none;
+  }
+
   
   .singlePostEdit {
     float: right;
@@ -61,4 +76,25 @@
     margin-left: 20px;
     font-size: 30px;
     font-weight: 600;
+  }
+  .singlePostDescInput{
+    color: #666;
+    font-size: 18px;
+    line-height: 25px;
+    border: none;
+  }
+  .singlePostDescInput:focus{
+    outline:none
+  }
+
+  .singlePostButton {
+    width: 100px;
+    border: none;
+    background-color: teal;
+    padding: 5px;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    align-self: flex-end;
+    margin-top: 20px;
   }
